VSE - Frame Selected ( Numpad . ) doesnt work anymore #124868

Closed
opened 2024-07-17 11:48:36 +02:00 by Julian · 7 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad
Worked: 4.1

Short description of error
Frame Selected ( Numpad . ) doesnt work anymore

Exact steps for others to reproduce the error

  • Go to the VSE
  • import a video or add a text or color
  • select the strip and press "Numpad ." or go to "View" -> "Frame Selected"
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: `a51f293548ad` Worked: 4.1 **Short description of error** Frame Selected ( Numpad . ) doesnt work anymore **Exact steps for others to reproduce the error** - Go to the VSE - import a video or add a text or color - select the strip and press "Numpad ." or go to "View" -> "Frame Selected"
Julian added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-17 11:48:37 +02:00
Member

Hi, thanks for the report. Can confirm the regression.

Hi, thanks for the report. Can confirm the regression.
Member

Caused by 38dd4a5e9a
@ZedDB ^ :)

Caused by 38dd4a5e9adf9c666acea1b629c8abfc965961ae @ZedDB ^ :)
Member

Looks like an early return without setting new xmin and xmax : *rect = new_viewport;

Looks like an early return without setting new `xmin` and `xmax` : `*rect = new_viewport;`
Member

Quick hack to make it work when strips are within the view (only change, xmin/max):

diff --git a/source/blender/editors/space_sequencer/sequencer_view.cc b/source/blender/editors/space_sequencer/sequencer_view.cc
index f30dc5bbff3..534877c815e 100644
--- a/source/blender/editors/space_sequencer/sequencer_view.cc
+++ b/source/blender/editors/space_sequencer/sequencer_view.cc
@@ -359,6 +359,8 @@ static void seq_view_collection_rect_timeline(const bContext *C,
     if (orig_height > timeline_ymax - timeline_ymin) {
       /* Do nothing, we can't align the viewport any better if we
        * are zoomed out further than the current timeline bounds. */
+      rect->xmin = new_viewport.xmin;
+      rect->xmax = new_viewport.xmax;
       return;
     }
Quick hack to make it work when strips are within the view (only change, xmin/max): ```Diff diff --git a/source/blender/editors/space_sequencer/sequencer_view.cc b/source/blender/editors/space_sequencer/sequencer_view.cc index f30dc5bbff3..534877c815e 100644 --- a/source/blender/editors/space_sequencer/sequencer_view.cc +++ b/source/blender/editors/space_sequencer/sequencer_view.cc @@ -359,6 +359,8 @@ static void seq_view_collection_rect_timeline(const bContext *C, if (orig_height > timeline_ymax - timeline_ymin) { /* Do nothing, we can't align the viewport any better if we * are zoomed out further than the current timeline bounds. */ + rect->xmin = new_viewport.xmin; + rect->xmax = new_viewport.xmax; return; } ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-07-17 13:08:48 +02:00

@PratikPB2123 you are correct.
For some reason I forgot that we need to adjust the x-axis even if the y-axis doesn't need adjusting XD

@PratikPB2123 you are correct. For some reason I forgot that we need to adjust the x-axis even if the y-axis doesn't need adjusting XD

@PratikPB2123 you are correct.
For some reason I forgot that we need to adjust the x-axis even if the y-axis doesn't need adjusting XD

Needed to LTS 4.2? patch perfectly applied

> @PratikPB2123 you are correct. > For some reason I forgot that we need to adjust the x-axis even if the y-axis doesn't need adjusting XD Needed to LTS 4.2? patch perfectly applied
Member

Indeed, added it to backporting list :)

Indeed, added it to backporting list :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#124868
No description provided.