Fix #124868: Frame Selected didn't move of the X-axis sometimes

It would not execute the "Frame Selected" action if the viewport already
fully zoomed out on the y-axis. However we still need to center the
viewport around the selected strips x position.